videoTest/css/main.css
/* ... */
.contact-text p{
    color: #888;
    font-size: 17px;
    font-weight: 500;
    font-family: 'Open Sans', sans-serif;
}
.contact-text strong{
    color: #4b4a4a;
    font-size: 17px;
    font-weight: 700;
    font-family: 'Open Sans', sans-serif;
}
form input{
  background: none repeat scroll 0% 0% #F7F6F6;
  padding: 15px;
  width: 100%;
  border-radius: 5px;
  font-size: 16px;
  font-weight: 400;
  margin-top: 30px;
  font-family: 'Open Sans', sans-serif;
  box-shadow: none;
  border: 2px solid #f7f6f6;
  transition: all 0.5s ease-in;
  -moz-transition: all 0.5s ease-in;
  -o-transition: all 0.5s ease-in;
  -ms-transition: all 0.5s ease-in;
  -webkit-transition: all 0.5s ease-in;
}
.clear { clear:both}
form textarea{
  width: 100%;
  border-radius: 5px;
  box-shadow: none;
  background: none repeat scroll 0% 0% #F7F6F6;
  padding: 15px;
  font-size: 16px;
  font-weight: 400;
  height: 180px;
  margin-top: 30px;
  font-family: inherit;
  border: 2px solid #f7f6f6;
  font-family: 'Open Sans', sans-serif;
  resize: none;
  transition: all 0.5s ease-in;
  -moz-transition: all 0.5s ease-in;
  -ms-transition: all 0.5s ease-in;
  -o-transition: all 0.5s ease-in;
  -webkit-transition: all 0.5s ease-in;
}
button.submit{
background: #1C97CA;
border: medium none;
color: #FFF;
padding: 15px 90px;
font-size: 18px;
font-weight: 600;
font-family: "Open Sans",sans-serif;
transition: all 0.3s ease 0s;
-o-transition: all 0.3s ease 0s;
-webkit-transition: all 0.3s ease 0s;
-ms-transition: all 0.3s ease 0s;
-moz-transition: all 0.3s ease 0s;
margin-top: 20px;
transition: background 0.3s ease-in;
cursor: pointer;
display: block;
margin: 50px auto 0px;
border-radius : 25px;
}
button.submit:hover{
  background:#00ccea;
}
form input:focus{
  border: 2px solid #888;
  background-color: #fff;
}
form textarea:focus{
  border: 2px solid #888;
  background-color: #fff;
}

/*Is Visible*/
.is-visible { display: block !important; 
    transition: all 0.5s ease-in !important;
    -moz-transition: all 0.5s ease-in !important;
    -o-transition: all 0.5s ease-in !important;
    -ms-transition: all 0.5s ease-in;
    -webkit-transition: all 0.5s ease-in !important;
}

#mobile-header {
display: none;
}

/*------------------------------------------------------------------------------------------------------------------Wrapper & Carosel / Header text and CTA button*/
.wrapper{
	width: 100%;
	height: 550px;
}

.container_slick{
	width: 100%;
	height: 550px;
}

.banner1{
	width: 100%;
	height: 550px;
	position: relative;
	/*background: url(../images/happyman-1.jpg) no-repeat fixed 30% 0%/cover;*/
}
.banner1 h1{
	position: absolute; 
  top: 200px; 
  left: 55px; 
}
.banner2 h1{
  position: absolute; 
  top: 200px; 
  left: 55px; 
  width: 100%;
}
.banner3 h1{
  position: absolute; 
  top: 200px; 
  left: 55px; 
  width: 100%;
}
.banner1 a{
  position: absolute; 
  top: 250px; 
  left: 60px; 
  width: 120px;
}
.banner2 a{
  position: absolute; 
  top: 250px; 
  left: 60px; 
  width: 120px;
}
.banner3 a{
  position: absolute; 
  top: 250px; 
  left: 60px; 
  width: 120px;
}
    .banner1 a.button {
      display: inline-block;
      text-decoration: none;
      padding: 10px;
      text-align: center;
      border-radius: 9px;
      margin-bottom: 16px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: #ffffff;
      width: 170px;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
    }

      .banner2 a.button {
      display: inline-block;
      text-decoration: none;
      padding: 10px;
      text-align: center;
      border-radius: 9px;
      margin-bottom: 16px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: #ffffff;
      width: 170px;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
    }
      .banner3 a.button {
      display: inline-block;
      text-decoration: none;
      padding: 10px;
      text-align: center;
      border-radius: 9px;
      margin-bottom: 16px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: #ffffff;
      width: 170px;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
    }

      #stickyBtn {
      display: inline-block;
      text-decoration: none;
      padding: 10px;
      text-align: center;
      /*border-radius: 9px;  color: #00ccea;*/
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: #ffffff;
      width: 70%;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
      position: fixed;
      bottom: 0;
    }

#stickyBtn:hover{
  color: #00ccea;
}
#stickyBtn{
  visibility: hidden;
}

#want-a-discount--button{
  /*color: #00ccea;*/
  float: left;
}
#want-a-discount--button:hover{
  color: #00ccea;
  /*border: 1px solid #f2f2f2;*/
}
a.button.full{
  padding: 16px 72px !important;
  font-size: 16px;
  background-color: #FF9735;
  border: 1px solid #FF9735;
  transition-duration: 0.1s;
  transition: all 0.2s, color 0.2s;
  animation: all spinAround 2s linear infinite;
}
a.button.full:hover {
  background-color: #f2f2f2;
  color: #ffffff;
}

.banner1 img{
	float: right;
	clear:none;
  height:auto; 
  width:100%;
}

.banner2 img{
  float: right;
  clear:none;
  height:auto; 
  width:100%;
}

.banner3 img{
  float: right;
  clear:none;
  height:auto; 
  width:100%;
}

.banner1 span{
	color: white; 
   font: bold 24px/45px Helvetica, Sans-Serif; 
   letter-spacing: -1px;  
   /*background: rgb(0, 0, 0); 
   background: rgba(0, 0, 0, 0.7);*/
   padding: 10px;
   font-size: 45px;
  font-family: 'Open Sans', 'Raleway', sans-serif; 
}

.banner2 span{
  color: white; 
  font: bold 24px/45px Helvetica, Sans-Serif; 
  letter-spacing: -1px;  
  padding: 10px;
  font-size: 45px;
  font-family: 'Open Sans', 'Raleway', sans-serif; 
}
/* ... */

